syntax = "proto3";
package anytype;
option go_package = "pb";

message TreeHeader {
  string firstChangeId = 1;
  bool isWorkspace = 2;
  // TODO: add user identity, signature and nano timestamp
}